# unicefstats-mcp

./: .gitignore  .markdownlint.json  .markdownlintignore  CHANGELOG.md  CODEOWNERS  CONCEPT_NOTE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROVENANCE.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
examples/: 00_build_ground_truth.py  01_run_direct_supplement.py  02_run_sdmx_mcp_benchmark.py  03_rerun_condition_b.py  04_replication_sample.py  06_mcp060_sample.py  DESIGN_ISSUES.md  LANDSCAPE.md  LITERATURE_REVIEW.md  MCP-DIRECTORY-STATS.md  RESULTS.md  benchmark.ipynb  benchmark.py  benchmark_eqa.py  benchmark_eqa_batch.py  benchmark_live.py  compare_pilot_versions.py  generate_timeline_v3.py  plot_results.py  reconstruct_batch_fast.py  reconstruct_batch_run.py  refined_extractor.py  resume_batch_run.py  statistical_analysis.py
examples/ground_truth_mcp060/: ground_truth_values.csv  metadata.json  query_universe.csv  sample.csv
examples/ground_truth_r2/: ground_truth_values.csv  metadata.json  query_universe.csv  sample.csv
examples/results/: eqa_3way_claude-sonnet-4-20250514_20260325.parquet  eqa_claude-sonnet-4-20250514_20260322_164422.json  eqa_claude-sonnet-4-20250514_20260322_202724.json  eqa_claude-sonnet-4-20250514_20260322_203139.csv  eqa_claude-sonnet-4-20250514_20260322_203139.json  eqa_claude-sonnet-4-20250514_20260322_204241.csv  eqa_claude-sonnet-4-20250514_20260322_204241.json  eqa_claude-sonnet-4-20250514_20260322_204514.csv  eqa_claude-sonnet-4-20250514_20260322_204514.json  eqa_claude-sonnet-4-20250514_20260322_211503.parquet  eqa_claude-sonnet-4-20250514_20260322_211637.csv  eqa_claude-sonnet-4-20250514_20260322_211637.json  eqa_claude-sonnet-4-20250514_20260322_211637.parquet  eqa_claude-sonnet-4-20250514_20260322_215211.csv  eqa_claude-sonnet-4-20250514_20260322_215211.json  eqa_claude-sonnet-4-20250514_20260322_220541.csv  eqa_claude-sonnet-4-20250514_20260322_220541.json  eqa_claude-sonnet-4-20250514_20260322_220541.parquet  eqa_claude-sonnet-4-20250514_20260322_221935.csv  eqa_claude-sonnet-4-20250514_20260322_221935.json  eqa_claude-sonnet-4-20250514_20260322_221935.parquet  (+63 more)
scripts/: check_version_consistency.py
src/unicefstats_mcp/: __init__.py  (+6 more)
tests/: conftest.py  test_formatters.py  test_get_data.py  test_metadata.py  test_prompts_resources.py  test_response_envelope.py  test_search.py  test_tools.py  test_validators.py
